# obs-streamup

./: .clang-format  CMakeLists.txt  CMakePresets.json  LOCALIZATION.md  README.md  StreamUPDock.ui  StreamupDock.ui  WEBSOCKET_API_DOCUMENTATION.md  buildspec.json  flow-layout.cpp  flow-layout.hpp  installer.iss.in  patch-notes-summary.md  patch-notes.md  plugin-info.md  resource.rc.in  resources.qrc  streamup-dock.cpp  streamup-dock.hpp  streamup.aps  streamup.cpp  streamup.hpp  streamup.rc  support-info.md  version.h  video-capture-popup.cpp  video-capture-popup.hpp  zh-CN.ini
.github/: FUNDING.yml
.github/actions/build-plugin/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/scripts/: Build-Windows.ps1  build-ubuntu
.github/workflows/: build.yml
.planning/: ROADMAP.md  STATE.md
.planning/phases/01-font-extraction/: 01-01-PLAN.md  01-01-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-font-availability-check/: 02-01-PLAN.md  02-01-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-warning-dialog-ui/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-font-url-display-in-dialog/: 04-RESEARCH.md
.planning/phases/04-font-url-manager/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-VERIFICATION.md
CI/macos/: streamup.pkgproj
cmake/: ObsPluginHelpers.cmake
cmake/common/: bootstrap.cmake
core/: file-manager.cpp  file-manager.hpp  plugin-manager.cpp  plugin-manager.hpp  plugin-state.cpp  plugin-state.hpp  source-manager.cpp  source-manager.hpp  streamup-common.cpp  streamup-common.hpp
data/locale/: en-GB.ini  en-US.ini  es-ES.ini  zh-CN.ini
docs/refactor/: CHANGELOG.md  INVENTORY.md  SMOKE_TEST_CHECKLIST.md
integrations/: websocket-api.cpp  websocket-api.hpp
multidock/: CMakeLists.txt  add_dock_dialog.cpp  add_dock_dialog.hpp  inner_dock_host.cpp  inner_dock_host.hpp  multidock_dialogs.cpp  multidock_dialogs.hpp  multidock_dock.cpp  multidock_dock.hpp  multidock_manager.cpp  multidock_manager.hpp  multidock_utils.cpp  multidock_utils.hpp  persistence.cpp  persistence.hpp
shared/obs-streamup-ui/include/streamup/ui/: breadcrumb.hpp  collapsible-section.hpp  color-picker.hpp  dialogs.hpp  draggable-list.hpp  feedback.hpp  flow-layout.hpp  gallery-style.hpp  glass.hpp  gradient-editor.hpp  hotkey-field.hpp  image-carousel.hpp  ios-checkbox.hpp  item-delegate.hpp  labels.hpp  line-numbered-editor.hpp  mac-inputs.hpp  pill-button.hpp  progress-bar.hpp  search-field.hpp  segmented-control.hpp  svg-icon.hpp  switch-button.hpp  tree-widget.hpp  ui-scrollbar.hpp  window-chrome.hpp
shared/obs-streamup-ui/src/: feedback.cpp  switch-button.cpp
sources/: adjustment-layer.cpp  adjustment-layer.hpp
ui/: hotkey-button-config-dialog.cpp  hotkey-button-config-dialog.hpp  hotkey-manager.cpp  hotkey-manager.hpp  hotkey-selector-dialog.cpp  hotkey-selector-dialog.hpp  hotkey-widget.cpp  hotkey-widget.hpp  icon-selector-dialog.cpp  icon-selector-dialog.hpp  menu-manager.cpp  menu-manager.hpp  mixer-enhancements.cpp  mixer-enhancements.hpp  module-setup-wizard.cpp  module-setup-wizard.hpp  notification-manager.cpp  notification-manager.hpp  obs-hotkey-manager.cpp  obs-hotkey-manager.hpp  patch-notes-window.cpp  patch-notes-window.hpp  settings-manager.cpp  settings-manager.hpp  splash-screen.cpp  splash-screen.hpp  streamup-toolbar-config.cpp  streamup-toolbar-config.hpp  streamup-toolbar-configurator.cpp  streamup-toolbar-configurator.hpp  streamup-toolbar.cpp  streamup-toolbar.hpp  studio-mode-enhancements.cpp  studio-mode-enhancements.hpp  switch-button.cpp  switch-button.hpp  theme-enhancements.cpp  theme-enhancements.hpp  theme-window.cpp  theme-window.hpp  (+8 more)
ui/dock/: streamup-dock.cpp  streamup-dock.hpp
ui/scene-organiser/: scene-organiser-dock.cpp  scene-organiser-dock.hpp
utilities/: debug-logger.cpp  debug-logger.hpp  error-handler.cpp  error-handler.hpp  http-client.cpp  http-client.hpp  obs-data-helpers.cpp  obs-data-helpers.hpp  obs-wrappers.hpp  path-utils.cpp  path-utils.hpp  string-utils.cpp  string-utils.hpp  undo-helpers.hpp  update-logging.py  version-utils.cpp  version-utils.hpp
